--- a/www.parliament.nz/b7e6acc99eedb7813bf5f2f245afa236f2a7214a.html
+++ b/www.parliament.nz/b7e6acc99eedb7813bf5f2f245afa236f2a7214a.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_606874035|rpid=-1690149007|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=2SVfqr|dpvc=1|lastModification=1537505623096|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhSg.css">
 	<!--<![endif]-->
@@ -882,7 +882,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=a1EJ3pVgcQk" 
-			   id="video78692" 
+			   id="video62395" 
 			   data-video-id="a1EJ3pVgcQk" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
