--- a/www.parliament.nz/00d0abbbf3651ccfde323d21dbc738cbd3ecd331.html
+++ b/www.parliament.nz/00d0abbbf3651ccfde323d21dbc738cbd3ecd331.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<script type="text/javascript" src="/ruxitagentjs_2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_2052469075|rpid=2104295133|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=2SVfqr|dpvc=1|lastModification=1537505623096|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_2052469075|rpid=-1811343018|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfqr|dpvc=1|lastModification=1537580331067|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
 	<!--<![endif]-->
@@ -605,36 +605,6 @@
 							<ul class="header__mobile-footer-nav cf">
 									<li class="header__mobile-footer-nav-item">
 										<a href="/en/footer/about-us/" target="_top" class="header__mobile-footer-nav-link" title="About Us">About Us</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/visit-and-learn/how-parliament-works/glossary/" class="header__mobile-footer-nav-link" title="Glossary">Glossary</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/faqs/" target="_top" class="header__mobile-footer-nav-link" title="FAQs">FAQs</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/jobs/" class="header__mobile-footer-nav-link" title="Careers">Careers</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/contact-us/" target="_top" class="header__mobile-footer-nav-link" title="Contact us">Contact us</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/accessibility/" target="_top" class="header__mobile-footer-nav-link" title="Accessibility">Accessibility</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/copyright/" class="header__mobile-footer-nav-link" title="Copyright">Copyright</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/privacy/" target="_top" class="header__mobile-footer-nav-link" title="Privacy">Privacy</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/alerts/" target="_top" class="header__mobile-footer-nav-link" title="Alerts">Alerts</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/footer/website-help/" class="header__mobile-footer-nav-link" title="Website Help">Website Help</a>
-									</li>
-									<li class="header__mobile-footer-nav-item">
-										<a href="/en/sitemap/" target="_blank" class="header__mobile-footer-nav-link" title="Sitemap">Sitemap</a>
 									</li>
 							</ul>
 						</div>
@@ -1662,56 +1632,6 @@
 					<li class="footer__nav-item">
 						<a href="/en/footer/about-us/" target="_top" class="footer__nav-link" title="About Us">
 							About Us
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/visit-and-learn/how-parliament-works/glossary/" class="footer__nav-link" title="Glossary">
-							Glossary
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/faqs/" target="_top" class="footer__nav-link" title="FAQs">
-							FAQs
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/jobs/" class="footer__nav-link" title="Careers">
-							Careers
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/contact-us/" target="_top" class="footer__nav-link" title="Contact us">
-							Contact us
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/accessibility/" target="_top" class="footer__nav-link" title="Accessibility">
-							Accessibility
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/copyright/" class="footer__nav-link" title="Copyright">
-							Copyright
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/privacy/" target="_top" class="footer__nav-link" title="Privacy">
-							Privacy
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/alerts/" target="_top" class="footer__nav-link" title="Alerts">
-							Alerts
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/footer/website-help/" class="footer__nav-link" title="Website Help">
-							Website Help
-						</a>
-					</li>
-					<li class="footer__nav-item">
-						<a href="/en/sitemap/" target="_blank" class="footer__nav-link" title="Sitemap">
-							Sitemap
 						</a>
 					</li>
 			</ul>
