--- a/www.parliament.nz/614d91e94581ff23888f37a0435f45c53e6f6db5.html
+++ b/www.parliament.nz/614d91e94581ff23888f37a0435f45c53e6f6db5.html
@@ -7,7 +7,7 @@
 <!--[if (gte IE 10)|!(IE)]><!-->
 <html lang="en" class="no-js">
  <!--<![endif]-->
-<!-- prod p1 -->
+<!-- prod p2 -->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -22,12 +22,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_-2088321430|rpid=1323541713|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfqr|dpvc=1|lastModification=1537580331067|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfqr_10151180821210004.js" data-dtconfig="rid=RID_-2088321430|rpid=-199997726|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|bp2=1|featureHash=ICA2SVfqr|dpvc=1|lastModification=1537580331067|dtVersion=10151180821210004|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfqr_10151180821210004.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
-	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhSg.css">
+	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
 	<!--<![endif]-->
 	<!--[if (lt IE 10) & (!IEMobile)]>
-		<link rel="stylesheet" type="text/css" href="/content/css/style-fixed.EFJhSg.css">
+		<link rel="stylesheet" type="text/css" href="/content/css/style-fixed.EFJhYg.css">
 	<![endif]-->
 	
 	
@@ -50,9 +50,9 @@
 	</script>
 
 	<!--[if (lte IE 9) | (IEMobile)]>
-		<script src="/content/scripts/dist/lib/matchMedia.EFJhSg.js"></script>
+		<script src="/content/scripts/dist/lib/matchMedia.EFJhYg.js"></script>
 	<![endif]-->
-			<script src="/content/scripts/dist/bootstrap.EFJhSg.js"></script>
+			<script src="/content/scripts/dist/bootstrap.EFJhYg.js"></script>
 
 
 	
@@ -509,7 +509,7 @@
 
 	<a href="/en/visit-and-learn/visit/" class="megamenu__cta cf">
 		<div class="figure">
-				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhSg.png" data-original="/media/1778/ph-and-bhive-with-school-helena-photo.jpg?center=0.47949526813880128,0.50210084033613445&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131444262000000000" alt="A school group visit New Zealand&#39;s Parliament buildings" class="js-lazy-auto " title="A school group visit New Zealand&#39;s Parliament buildings DUPLICATE"/>
+				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhYg.png" data-original="/media/1778/ph-and-bhive-with-school-helena-photo.jpg?center=0.47949526813880128,0.50210084033613445&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131444262000000000" alt="A school group visit New Zealand&#39;s Parliament buildings" class="js-lazy-auto " title="A school group visit New Zealand&#39;s Parliament buildings DUPLICATE"/>
 	<noscript>
 		<img src="/media/1778/ph-and-bhive-with-school-helena-photo.jpg?center=0.47949526813880128,0.50210084033613445&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131444262000000000" alt="A school group visit New Zealand&#39;s Parliament buildings" class="" title="A school group visit New Zealand&#39;s Parliament buildings DUPLICATE" />
 	</noscript>
@@ -528,7 +528,7 @@
 
 	<a href="/en/visit-and-learn/bellamys-by-logan-brown/" class="megamenu__cta cf">
 		<div class="figure">
-				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhSg.png" data-original="/media/4738/bellamys-1.jpg?anchor=center&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131692121950000000" alt="A woman and a man enjoying wine at a restaurant." class="js-lazy-auto " title="Bellamys (small)"/>
+				<img src="/content/images/placeholder/lazyload/thumbnail.EFJhYg.png" data-original="/media/4738/bellamys-1.jpg?anchor=center&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131692121950000000" alt="A woman and a man enjoying wine at a restaurant." class="js-lazy-auto " title="Bellamys (small)"/>
 	<noscript>
 		<img src="/media/4738/bellamys-1.jpg?anchor=center&amp;mode=crop&amp;width=200&amp;height=150&amp;rnd=131692121950000000" alt="A woman and a man enjoying wine at a restaurant." class="" title="Bellamys (small)" />
 	</noscript>
@@ -605,6 +605,36 @@
 							<ul class="header__mobile-footer-nav cf">
 									<li class="header__mobile-footer-nav-item">
 										<a href="/en/footer/about-us/" target="_top" class="header__mobile-footer-nav-link" title="About Us">About Us</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/visit-and-learn/how-parliament-works/glossary/" class="header__mobile-footer-nav-link" title="Glossary">Glossary</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/faqs/" target="_top" class="header__mobile-footer-nav-link" title="FAQs">FAQs</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/jobs/" class="header__mobile-footer-nav-link" title="Careers">Careers</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/contact-us/" target="_top" class="header__mobile-footer-nav-link" title="Contact us">Contact us</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/accessibility/" target="_top" class="header__mobile-footer-nav-link" title="Accessibility">Accessibility</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/copyright/" class="header__mobile-footer-nav-link" title="Copyright">Copyright</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/privacy/" target="_top" class="header__mobile-footer-nav-link" title="Privacy">Privacy</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/alerts/" target="_top" class="header__mobile-footer-nav-link" title="Alerts">Alerts</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/website-help/" class="header__mobile-footer-nav-link" title="Website Help">Website Help</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/sitemap/" target="_blank" class="header__mobile-footer-nav-link" title="Sitemap">Sitemap</a>
 									</li>
 							</ul>
 						</div>
@@ -707,7 +737,7 @@
 				<div class="grid--tight">
 					<div class="grid__item one-half">
 							<div class="document-panel__img figure">
-									<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/1316/new-green-logo-green-web.DmxK7w.jpg" alt="Green Party" class="js-lazy-auto " title="Green Party"/>
+									<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/1316/new-green-logo-green-web.DmxK7w.jpg" alt="Green Party" class="js-lazy-auto " title="Green Party"/>
 	<noscript>
 		<img src="/media/1316/new-green-logo-green-web.DmxK7w.jpg" alt="Green Party" class="" title="Green Party" />
 	</noscript>
@@ -722,7 +752,7 @@
 					</div>
 					<div class="grid__item one-half">
 							<div class="document-panel__img figure">
-									<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/1339/logie-jan.DmxK9Q.jpg" alt="Jan Logie" class="js-lazy-auto " title="Logie, Jan"/>
+									<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/1339/logie-jan.DmxK9Q.jpg" alt="Jan Logie" class="js-lazy-auto " title="Logie, Jan"/>
 	<noscript>
 		<img src="/media/1339/logie-jan.DmxK9Q.jpg" alt="Jan Logie" class="" title="Logie, Jan" />
 	</noscript>
@@ -736,7 +766,7 @@
 			<div class="cf">
 				<div class="document-panel hidden show--l">
 						<div class="document-panel__img figure">
-								<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/1316/new-green-logo-green-web.DmxK7w.jpg" alt="Green Party" class="js-lazy-auto " title="Green Party"/>
+								<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/1316/new-green-logo-green-web.DmxK7w.jpg" alt="Green Party" class="js-lazy-auto " title="Green Party"/>
 	<noscript>
 		<img src="/media/1316/new-green-logo-green-web.DmxK7w.jpg" alt="Green Party" class="" title="Green Party" />
 	</noscript>
@@ -744,7 +774,7 @@
 						</div>
 						<div class="document-panel__figcaption">Green Party</div>
 											<div class="document-panel__img figure">
-								<img src="/content/images/placeholder/lazyload/original.EFJhSg.png" data-original="/media/1339/logie-jan.DmxK9Q.jpg" alt="Jan Logie" class="js-lazy-auto " title="Logie, Jan"/>
+								<img src="/content/images/placeholder/lazyload/original.EFJhYg.png" data-original="/media/1339/logie-jan.DmxK9Q.jpg" alt="Jan Logie" class="js-lazy-auto " title="Logie, Jan"/>
 	<noscript>
 		<img src="/media/1339/logie-jan.DmxK9Q.jpg" alt="Jan Logie" class="" title="Logie, Jan" />
 	</noscript>
@@ -967,7 +997,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=g2li1-QtVuY" 
-			   id="video60497" 
+			   id="video15027" 
 			   data-video-id="g2li1-QtVuY" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
@@ -976,7 +1006,7 @@
 				<span class="figure__icon">
 					<span aria-hidden="true" class="iconf-play"></span>
 				</span>
-					<img src="/content/images/placeholder/lazyload/landscape.EFJhSg.png" data-original="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="js-lazy-auto " title="Maiden Speech Static Image"/>
+					<img src="/content/images/placeholder/lazyload/landscape.EFJhYg.png" data-original="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="js-lazy-auto " title="Maiden Speech Static Image"/>
 	<noscript>
 		<img src="/media/4823/maiden-speech-static-image.jpg?anchor=center&amp;mode=crop&amp;width=920&amp;height=518&amp;rnd=131731813260000000" alt="Maiden Speech" class="" title="Maiden Speech Static Image" />
 	</noscript>
@@ -1557,6 +1587,56 @@
 							About Us
 						</a>
 					</li>
+					<li class="footer__nav-item">
+						<a href="/en/visit-and-learn/how-parliament-works/glossary/" class="footer__nav-link" title="Glossary">
+							Glossary
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/faqs/" target="_top" class="footer__nav-link" title="FAQs">
+							FAQs
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/jobs/" class="footer__nav-link" title="Careers">
+							Careers
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/contact-us/" target="_top" class="footer__nav-link" title="Contact us">
+							Contact us
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/accessibility/" target="_top" class="footer__nav-link" title="Accessibility">
+							Accessibility
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/copyright/" class="footer__nav-link" title="Copyright">
+							Copyright
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/privacy/" target="_top" class="footer__nav-link" title="Privacy">
+							Privacy
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/alerts/" target="_top" class="footer__nav-link" title="Alerts">
+							Alerts
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/website-help/" class="footer__nav-link" title="Website Help">
+							Website Help
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/sitemap/" target="_blank" class="footer__nav-link" title="Sitemap">
+							Sitemap
+						</a>
+					</li>
 			</ul>
 
 		<a href="#" title="Back to top" class="footer__top-link js-scroll-top theme__link">
@@ -1576,6 +1656,6 @@
 		<li><a accesskey="/" href="http://www.govt.nz/" target="_blank">New Zealand Government</a></li>
 	</ul>
 
-	<script src="/content/scripts/dist/paths.2018-9-5T9-5-14.js"></script><script>require.config({baseUrl: '/content/scripts/dist/lib/'});require( ['/content/scripts/dist/main.2018-9-5T9-5-14.js'], function() { require( ['app/page/all'], function() { require( ['app/page/detail'] ); }); });</script>
+	<script src="/content/scripts/dist/paths.2018-9-5T9-5-38.js"></script><script>require.config({baseUrl: '/content/scripts/dist/lib/'});require( ['/content/scripts/dist/main.2018-9-5T9-5-38.js'], function() { require( ['app/page/all'], function() { require( ['app/page/detail'] ); }); });</script>
 </body>
 </html>
